# doxstractor

./: .gitignore  README.md  pyproject.toml
doxstractor/: __init__.py  nodes.py  utils.py
doxstractor/extractors/: __init__.py  base.py  category.py  numeric.py  text.py
doxstractor/models/: __init__.py  anthropic.py  base.py  huggingface_endpoints.py  mock.py  transformers_classify.py  transformers_qa.py
tests/: test_nodes.py
tutorial_notebooks/: tutorial.ipynb
tutorial_notebooks/tutorial_data/: EDGAR_employment_agreement_1.html  EDGAR_employment_agreement_2.html  EDGAR_employment_agreement_3.html  EDGAR_lease_agreement_1.html  EDGAR_lease_agreement_2.html
