# PEP-518 https://peps.python.org/pep-0518/
[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=65.5.1"]       # PEP 518 specifications
build-backend = "setuptools.build_meta"

[project]
name = "doxstractor"
version = "0.1.1"
authors = [{ name = "Jannes Klaas" }]

description = "Doxstractor extracts strutured data from text in an easily configurable way."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["anthropic==0.25.1", "transformers==4.39.3"]
license = { text = "Apache Software License (Apache 2.0)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JannesKlaas/doxstractor"
Issues = "https://github.com/JannesKlaas/doxstractor/issues"

[tool.setuptools.packages.find]
include = ["doxstractor*"]
